Added unit tests to PlayerBase